kubernetes/main/apps/whoami/app/annotations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  annotations:
    testAnnotation: "true"
