kubernetes/main/apps/whoami/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.jacob-williams.me`)
      kind: Rule
      services:
        - name: whoami
          port: 80
          scheme: http
          passHostHeader: true
      middlewares:
        - name: default-headers
